--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
   <div class="page">
     <header class="header page__header">
       <img class="logo header__logo" src="./images/logo.svg" alt="Логотип">
-      <hr class="header__line">
     </header>
     <main class="content">
       <section class="profile content__profile">
-        <img class="profile__avatar" src="./images/profile-image .jpg"
+        <img class="profile__avatar" src="./images/profile-image.jpg"
         alt="Фотография Жака-Ива Кусто">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button type="button" class="button button_type_edit"></button>
+          <button type="button" class="button button_type_edit" aria-label="edit"></button>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button type="button" class="button button_type_add"></button>
+        <button type="button" class="button button_type_add" aria-label="add"></button>
       </section>
       <section class="cards content__cards">
         <article class="card">
@@ -33,7 +32,7 @@
           alt="Фотография старинной крепости">
           <div class="card__item">
             <h2 class="card__title">Карачаевск</h2>
-            <button type="button" class="button button_type_like"></button>
+            <button type="button" class="button button_type_like" aria-label="score"></button>
           </div>
         </article>
         <article class="card">
@@ -41,7 +40,7 @@
           alt="Фотография с видом Эльбруса">
           <div class="card__item">
             <h2 class="card__title">Гора Эльбрус</h2>
-            <button type="button" class="button button_type_like"></button>
+            <button type="button" class="button button_type_like" aria-label="score"></button>
           </div>
         </article>
         <article class="card">
@@ -49,7 +48,7 @@
           alt="Фотогрвфия Домбая">
           <div class="card__item">
             <h2 class="card__title">Домбай</h2>
-            <button type="button" class="button button_type_like"></button>
+            <button type="button" class="button button_type_like" aria-label="score"></button>
           </div>
         </article>
         <article class="card">
@@ -57,7 +56,7 @@
           alt="Фотография с видом Эльбруса">
           <div class="card__item">
             <h2 class="card__title">Гора Эльбрус</h2>
-            <button type="button" class="button button_type_like"></button>
+            <button type="button" class="button button_type_like" aria-label="score"></button>
           </div>
         </article>
         <article class="card">
@@ -65,7 +64,7 @@
           alt="Фотография Домбая">
           <div class="card__item">
             <h2 class="card__title">Домбай</h2>
-            <button type="button" class="button button_type_like"></button>
+            <button type="button" class="button button_type_like" aria-label="score"></button>
           </div>
         </article>
         <article class="card">
@@ -73,25 +72,27 @@
           alt="Фотография Карачаево-Черкессии">
           <div class="card__item">
             <h2 class="card__title">Карачаево-Черкессия</h2>
-            <button type="button" class="button button_type_like"></button>
+            <button type="button" class="button button_type_like" aria-label="score"></button>
           </div>
         </article>
       </section>
     </main>
-    <footer class="footer page__footer">&copy; 2020 Mesto Russia</footer>
-    <section class="popup popup_opened">
+    <footer class="footer page__footer">
+      <p class="footer__paragraph">&copy; 2020 Mesto Russia</p>
+    </footer>
+    <div class="popup">
       <div class="popup__container">
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form">
-          <input type="text" class="popup__item popup__item_type_name">
-          <hr class="popup__line">
-          <input type="text" class="popup__item popup__item_type_job">
-          <hr class="popup__line">
+        <form class="popup__form" name="input-container">
+          <h2 class="popup__heading">Редактировать профиль</h2>
+          <input type="text" class="popup__item popup__item_type_name" name="name"
+          required placeholder="Ваше имя">
+          <input type="text" class="popup__item popup__item_type_job" name="job"
+          required placeholder="Ваша профессия">
           <button type="submit" class="button button_type_save">Сохранить</button>
         </form>
       </div>
-      <button type="reset" class="button button_type_close"></button>
-    </section>
+      <button type="button" class="button button_type_close" aria-label="close"></button>
+    </div>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
