--- a/index.html
+++ b/index.html
@@ -26,56 +26,7 @@
         </div>
         <button type="button" class="button button_type_add" aria-label="add"></button>
       </section>
-      <section class="cards content__cards">
-        <article class="card">
-          <img class="card__image" src="./images/cards-karachayevsk.jpg"
-          alt="Фотография старинной крепости">
-          <div class="card__item">
-            <h2 class="card__title">Карачаевск</h2>
-            <button type="button" class="button button_type_like" aria-label="score"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/cards-elbrus.jpg"
-          alt="Фотография с видом Эльбруса">
-          <div class="card__item">
-            <h2 class="card__title">Гора Эльбрус</h2>
-            <button type="button" class="button button_type_like" aria-label="score"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/cards-dombai.jpg"
-          alt="Фотогрвфия Домбая">
-          <div class="card__item">
-            <h2 class="card__title">Домбай</h2>
-            <button type="button" class="button button_type_like" aria-label="score"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/cards-elbrus.jpg"
-          alt="Фотография с видом Эльбруса">
-          <div class="card__item">
-            <h2 class="card__title">Гора Эльбрус</h2>
-            <button type="button" class="button button_type_like" aria-label="score"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/cards-dombai.jpg"
-          alt="Фотография Домбая">
-          <div class="card__item">
-            <h2 class="card__title">Домбай</h2>
-            <button type="button" class="button button_type_like" aria-label="score"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/cards-karachayevsk.jpg"
-          alt="Фотография Карачаево-Черкессии">
-          <div class="card__item">
-            <h2 class="card__title">Карачаево-Черкессия</h2>
-            <button type="button" class="button button_type_like" aria-label="score"></button>
-          </div>
-        </article>
-      </section>
+      <section class="cards content__cards"></section>
     </main>
     <footer class="footer page__footer">
       <p class="footer__paragraph">&copy; 2020 Mesto Russia</p>
@@ -90,10 +41,42 @@
           required placeholder="Ваша профессия">
           <button type="submit" class="button button_type_save">Сохранить</button>
         </form>
+        <button type="button" class="button button_type_close" aria-label="close"></button>
       </div>
-      <button type="button" class="button button_type_close" aria-label="close"></button>
+    </div>
+    <div class="popup-cards">
+      <div class="popup-cards__container">
+        <form class="popup-cards__form" name="input-container">
+          <h2 class="popup-cards__heading">Новое место</h2>
+          <input type="text" class="popup-cards__item popup-cards__item_type_place"
+          name="name" required placeholder="Название">
+          <input type="text" class="popup-cards__item popup-cards__item_type_link"
+          name="link" required placeholder="Ссылка на картинку">
+          <button type="submit" class="button button_type_create">Создать</button>
+        </form>
+        <button type="button" class="button button_type_close-cards" aria-label="close"></button>
+      </div>
+    </div>
+    <div class="popup-pics">
+      <div class="popup-pics__container">
+        <figure class="popup-pics__figure">
+          <img class="popup-pics__image">
+          <figcaption class="popup-pics__caption"></figcaption>
+        </figure>
+        <button type="button" class="button button_type_close-pics" aria-label="close"></button>
+      </div>
     </div>
   </div>
+  <template id="card">
+    <article class="card">
+      <img class="card__image">
+      <div class="card__item">
+        <h2 class="card__title"></h2>
+        <button type="button" class="card__like" aria-label="score"></button>
+      </div>
+      <button type="button" class="card__delete" aria-label="delete"></button>
+    </article>
+  </template>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
