--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
       <button type="button" class="card__delete" aria-label="delete"></button>
     </article>
   </template>
-  <script src="./scripts/cards.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/Constants.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
